---
title: SIGAC — Modelo de dados canônico
config:
  theme: base
  themeVariables:
    primaryColor: '#E7F4F0'
    primaryTextColor: '#12332B'
    primaryBorderColor: '#007F5F'
    lineColor: '#526A63'
    fontFamily: 'Arial'
---
erDiagram
    PROFILES ||--o{ USERS : profile_id
    MODULES ||--o{ PERMISSIONS : module_id
    PROFILES ||--o{ PROFILE_PERMISSIONS : profile_id
    PERMISSIONS ||--o{ PROFILE_PERMISSIONS : permission_id
    PROFILES ||--o{ PROFILE_MODULES : profile_id
    MODULES ||--o{ PROFILE_MODULES : module_id
    PROJECTS ||--o{ PROJECT_MEMBERS : project_id
    USERS ||--o{ PROJECT_MEMBERS : user_id
    PROJECTS ||--o{ PROJECT_GROUPS : project_id
    GROUPS ||--o{ PROJECT_GROUPS : group_id
    USERS ||--o{ USER_GROUPS : user_id
    GROUPS ||--o{ USER_GROUPS : group_id
    PROJECTS ||--o{ FILES : project_id
    FILES ||--o{ FILES : parent_id
    USERS ||--o{ FILES : created_by
    FILES ||--o{ FILE_SHARES : file_id
    USERS ||--o{ FILE_SHARES : user_id
    FILES ||--o{ FILE_PERMISSIONS : file_id
    USERS ||--o{ FILE_PERMISSIONS : user_id
    GROUPS ||--o{ FILE_PERMISSIONS : group_id
    PROJECTS ||--o{ ACCESS_REQUESTS : project_id
    USERS ||--o{ ACCESS_REQUESTS : requester_id
    USERS ||--o{ ACCESS_REQUESTS : analyzed_by
    USERS ||--o{ NOTIFICATIONS : user_id
    USERS ||--o{ ACTIVITY_LOGS : user_id
    REPORT_TYPES ||--o{ REPORT_FIELDS : report_code
    MODULES ||--o{ MENUS : module_id

    PROFILES { string id PK string name UK text description datetime created_at }
    USERS { string id PK string name string email UK string job_title string area string role FK_profile_id string avatar_url datetime last_login_at datetime created_at }
    MODULES { string id PK string name UK string route string icon int display_order boolean active }
    PERMISSIONS { string id PK string module_id FK string name text description boolean active }
    PROFILE_PERMISSIONS { string profile_id PK_FK string permission_id PK_FK boolean allowed }
    PROFILE_MODULES { string profile_id PK_FK string module_id PK_FK boolean can_view }
    PROJECTS { string id PK string name string code UK string responsible_area json managers_ids string status json participants_ids datetime created_at datetime updated_at }
    PROJECT_MEMBERS { string project_id PK_FK string user_id PK_FK string role datetime created_at }
    GROUPS { string id PK string name UK text description datetime created_at }
    USER_GROUPS { string user_id PK_FK string group_id PK_FK string source datetime created_at }
    PROJECT_GROUPS { string project_id PK_FK string group_id PK_FK string role datetime created_at }
    FILES { string id PK string project_id FK string parent_id FK string kind string name bigint size_bytes string mime_type string created_by FK datetime created_at datetime updated_at }
    FILE_SHARES { string file_id PK_FK string user_id PK_FK string access_level datetime created_at }
    FILE_PERMISSIONS { string file_id PK_FK string user_id FK string group_id FK string access_level string inherited_from datetime created_at }
    ACCESS_REQUESTS { string id PK string project_id FK string requester_id FK string status string requested_role text justification string analyzed_by FK datetime created_at datetime updated_at }
    NOTIFICATIONS { string id PK string user_id FK string type string title text message datetime read_at datetime created_at }
    ACTIVITY_LOGS { string id PK string user_id FK string action string entity string entity_id text details datetime created_at }
    REPORT_TYPES { string id PK string code UK string name text description text formats boolean active }
    REPORT_FIELDS { string id PK string report_code FK string field_key string label string source_key int display_order boolean active }
    MENUS { string id PK string module_id FK string parent_id string name string route string icon int display_order boolean active }
